[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Yuri Bakurov <yuri.bakurov@arsis.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pika = "^1.3.2"
aio-pika = "^9.4.3"
alembic = "^1.13.3"
psycopg2 = "^2.9.10"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
